Fixed hamburger menu spacing

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -63,6 +63,7 @@ if the HTML file loads this CSS file in the first place.
   position: fixed;
   top: 0px;
   width: 100%;
+  z-index: 3;
   background: rgba(0, 0, 0, 0.5);
 }
 
@@ -151,10 +152,14 @@ if the HTML file loads this CSS file in the first place.
   overflow-y: auto;
 }
 
-.global-hamburger-items {
+.global-hamburger-itemcontainer ul {
   list-style: none;
   font-size: 36px;
   font-weight: 600;
+}
+
+.global-hamburger-itemcontainer ul li {
+  padding: 8px 0;
 }
 
 .global-hamburger-items a {
@@ -163,7 +168,7 @@ if the HTML file loads this CSS file in the first place.
 }
 
 .global-hamburger-state-hidden, .global-hamburger-state-visible {
-  transition: left 0.7s;
+  transition: left 0.8s;
 }
 
 .global-hamburger-state-hidden {
@@ -172,4 +177,12 @@ if the HTML file loads this CSS file in the first place.
 
 .global-hamburger-state-visible {
   left: 0%;
+}
+
+.global-main {
+  overflow-y: auto;
+  position: absolute;
+  top: 88px;
+  width: 100%;
+  height: auto;
 }
